tests/ui/diagnostic_namespace/do_not_recommend/nested.current.stderr
error[E0277]: the trait bound `(): Root` is not satisfied
  --> $DIR/nested.rs:22:18
   |
LL |     needs_root::<()>();
   |                  ^^ the trait `Root` is not implemented for `()`
   |
note: required by a bound in `needs_root`
  --> $DIR/nested.rs:19:18
   |
LL | fn needs_root<T: Root>() {}
   |                  ^^^^ required by this bound in `needs_root`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
